working shell, package still needs to be created

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,9 +6,7 @@ events {
 }
 
 http {
-    # lua_package_path "/etc/nginx/lua/?.lua;;";  # Lua module path
-    # lua_package_path "./pkgs/share/lua/5.4/?.lua;;";
-    lua_package_path "./?.lua;./modules/?.lua;;";
+    lua_package_path "./modules/?.lua;;";
     access_log /tmp/hpln/access.log combined;
     error_log /tmp/hpln/error.log debug;
     server {
