some cosmetical changes

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes  1;
+worker_processes  auto;
 pid /tmp/hpln/nginx.pid;
 
 events {
@@ -31,7 +31,6 @@ http {
             default_type text/html;
             content_by_lua_file ./routes/privacy.lua;
         }
-
-
+        
     }
 }
